--- a/convolutional_neural_network.ipynb
+++ b/convolutional_neural_network.ipynb
@@ -20,23 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "id": "sCV30xyVhFbE"
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimage\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ImageDataGenerator\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
@@ -44,21 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "id": "FIleuCAjoFD8"
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtf\u001b[49m\u001b[38;5;241m.\u001b[39m__version__\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'tf' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'2.19.0'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -85,11 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "0koUcJMJpEBD"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 8000 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "train_datagen = ImageDataGenerator(rescale = 1./255,\n",
     "                                   shear_range = 0.2,\n",
@@ -112,11 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "SH4WzfOhpKc3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2000 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "test_set = test_datagen.flow_from_directory('dataset/test_set',\n",
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "SAUt4UMPlhLS"
    },
@@ -165,11 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "XPzPrMckl-hV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mahid\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "cnn.add(tf.keras.layers.Conv2D(filters=32, kernel_size=3, activation='relu', input_shape=[64, 64, 3]))"
    ]
@@ -185,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "ncpqPl69mOac"
    },
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "i_-FZjn_m8gk"
    },
@@ -226,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "6AZeOGCvnNZn"
    },
@@ -246,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "8GtmUlLd26Nq"
    },
@@ -266,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "1p_Zj1Mc3Ko_"
    },
@@ -295,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "NALksrNQpUlJ"
    },
@@ -319,7 +331,82 @@
    "metadata": {
     "id": "XUj1W4PJptta"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mahid\\anaconda3\\Lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m63s\u001b[0m 244ms/step - accuracy: 0.5504 - loss: 0.6862 - val_accuracy: 0.6875 - val_loss: 0.5951\n",
+      "Epoch 2/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 214ms/step - accuracy: 0.6666 - loss: 0.6039 - val_accuracy: 0.7050 - val_loss: 0.5816\n",
+      "Epoch 3/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 214ms/step - accuracy: 0.7149 - loss: 0.5499 - val_accuracy: 0.7415 - val_loss: 0.5228\n",
+      "Epoch 4/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 211ms/step - accuracy: 0.7302 - loss: 0.5251 - val_accuracy: 0.7690 - val_loss: 0.4970\n",
+      "Epoch 5/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 213ms/step - accuracy: 0.7564 - loss: 0.4947 - val_accuracy: 0.7805 - val_loss: 0.4881\n",
+      "Epoch 6/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 235ms/step - accuracy: 0.7711 - loss: 0.4736 - val_accuracy: 0.7200 - val_loss: 0.6024\n",
+      "Epoch 7/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m77s\u001b[0m 213ms/step - accuracy: 0.7774 - loss: 0.4670 - val_accuracy: 0.7785 - val_loss: 0.4723\n",
+      "Epoch 8/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 214ms/step - accuracy: 0.7940 - loss: 0.4376 - val_accuracy: 0.7695 - val_loss: 0.5023\n",
+      "Epoch 9/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 213ms/step - accuracy: 0.8005 - loss: 0.4235 - val_accuracy: 0.7980 - val_loss: 0.4478\n",
+      "Epoch 10/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m844s\u001b[0m 3s/step - accuracy: 0.8034 - loss: 0.4222 - val_accuracy: 0.7960 - val_loss: 0.4597\n",
+      "Epoch 11/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 219ms/step - accuracy: 0.8201 - loss: 0.4027 - val_accuracy: 0.8020 - val_loss: 0.4413\n",
+      "Epoch 12/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 215ms/step - accuracy: 0.8287 - loss: 0.3820 - val_accuracy: 0.7850 - val_loss: 0.5064\n",
+      "Epoch 13/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 215ms/step - accuracy: 0.8264 - loss: 0.3686 - val_accuracy: 0.8035 - val_loss: 0.4411\n",
+      "Epoch 14/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1362s\u001b[0m 5s/step - accuracy: 0.8401 - loss: 0.3510 - val_accuracy: 0.8140 - val_loss: 0.4339\n",
+      "Epoch 15/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 220ms/step - accuracy: 0.8484 - loss: 0.3449 - val_accuracy: 0.7910 - val_loss: 0.4850\n",
+      "Epoch 16/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 215ms/step - accuracy: 0.8533 - loss: 0.3343 - val_accuracy: 0.8020 - val_loss: 0.4518\n",
+      "Epoch 17/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 215ms/step - accuracy: 0.8575 - loss: 0.3263 - val_accuracy: 0.7865 - val_loss: 0.4783\n",
+      "Epoch 18/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2717s\u001b[0m 11s/step - accuracy: 0.8663 - loss: 0.3003 - val_accuracy: 0.7830 - val_loss: 0.5139\n",
+      "Epoch 19/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 217ms/step - accuracy: 0.8833 - loss: 0.2838 - val_accuracy: 0.8100 - val_loss: 0.4704\n",
+      "Epoch 20/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 217ms/step - accuracy: 0.8825 - loss: 0.2818 - val_accuracy: 0.8120 - val_loss: 0.4740\n",
+      "Epoch 21/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 217ms/step - accuracy: 0.8878 - loss: 0.2649 - val_accuracy: 0.8180 - val_loss: 0.4621\n",
+      "Epoch 22/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4238s\u001b[0m 17s/step - accuracy: 0.8937 - loss: 0.2664 - val_accuracy: 0.8080 - val_loss: 0.5016\n",
+      "Epoch 23/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m62s\u001b[0m 248ms/step - accuracy: 0.9001 - loss: 0.2515 - val_accuracy: 0.8125 - val_loss: 0.5119\n",
+      "Epoch 24/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 235ms/step - accuracy: 0.9124 - loss: 0.2158 - val_accuracy: 0.8035 - val_loss: 0.4946\n",
+      "Epoch 25/25\n",
+      "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 234ms/step - accuracy: 0.9071 - loss: 0.2263 - val_accuracy: 0.7970 - val_loss: 0.5534\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x1c2fbb91e50>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cnn.fit(x = training_set, validation_data = test_set, epochs = 25)"
    ]
@@ -335,15 +422,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "gsSiWEJY1BPB"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 67ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from tensorflow.keras.preprocessing import image\n",
-    "test_image = image.load_img('dataset/single_prediction/cat_or_dog_1.jpg', target_size = (64, 64))\n",
+    "test_image = image.load_img('dataset\\\\training_set\\\\cats\\\\cat.354.jpg', target_size = (64, 64))\n",
     "test_image = image.img_to_array(test_image)\n",
     "test_image = np.expand_dims(test_image, axis = 0)\n",
     "result = cnn.predict(test_image)\n",
@@ -356,11 +451,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "id": "ED9KB3I54c1i"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n"
+     ]
+    }
+   ],
    "source": [
     "print(prediction)"
    ]
@@ -373,9 +476,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python [conda env:venv-2]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-venv-2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -387,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
