--- a/convolutional_neural_network.ipynb
+++ b/convolutional_neural_network.ipynb
@@ -328,61 +328,61 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "250/250 [==============================] - 47s 183ms/step - loss: 0.6845 - accuracy: 0.5514 - val_loss: 0.6653 - val_accuracy: 0.6015\n",
+      "250/250 [==============================] - 48s 185ms/step - loss: 0.6768 - accuracy: 0.5540 - val_loss: 0.6177 - val_accuracy: 0.6490\n",
       "Epoch 2/25\n",
-      "250/250 [==============================] - 40s 159ms/step - loss: 0.6079 - accuracy: 0.6722 - val_loss: 0.5785 - val_accuracy: 0.6920\n",
+      "250/250 [==============================] - 38s 150ms/step - loss: 0.6058 - accuracy: 0.6650 - val_loss: 0.5604 - val_accuracy: 0.7180\n",
       "Epoch 3/25\n",
-      "250/250 [==============================] - 41s 164ms/step - loss: 0.5617 - accuracy: 0.7099 - val_loss: 0.5688 - val_accuracy: 0.7065\n",
+      "250/250 [==============================] - 38s 150ms/step - loss: 0.5663 - accuracy: 0.7071 - val_loss: 0.6029 - val_accuracy: 0.6625\n",
       "Epoch 4/25\n",
-      "250/250 [==============================] - 41s 165ms/step - loss: 0.5249 - accuracy: 0.7389 - val_loss: 0.5330 - val_accuracy: 0.7400\n",
+      "250/250 [==============================] - 37s 149ms/step - loss: 0.5362 - accuracy: 0.7254 - val_loss: 0.5189 - val_accuracy: 0.7410\n",
       "Epoch 5/25\n",
-      "250/250 [==============================] - 41s 162ms/step - loss: 0.4964 - accuracy: 0.7585 - val_loss: 0.5145 - val_accuracy: 0.7550\n",
+      "250/250 [==============================] - 39s 154ms/step - loss: 0.5174 - accuracy: 0.7405 - val_loss: 0.5130 - val_accuracy: 0.7440\n",
       "Epoch 6/25\n",
-      "250/250 [==============================] - 41s 164ms/step - loss: 0.4779 - accuracy: 0.7705 - val_loss: 0.4832 - val_accuracy: 0.7680\n",
+      "250/250 [==============================] - 38s 151ms/step - loss: 0.4909 - accuracy: 0.7629 - val_loss: 0.4871 - val_accuracy: 0.7670\n",
       "Epoch 7/25\n",
-      "250/250 [==============================] - 40s 158ms/step - loss: 0.4566 - accuracy: 0.7805 - val_loss: 0.5032 - val_accuracy: 0.7625\n",
+      "250/250 [==============================] - 40s 160ms/step - loss: 0.4895 - accuracy: 0.7576 - val_loss: 0.5022 - val_accuracy: 0.7620\n",
       "Epoch 8/25\n",
-      "250/250 [==============================] - 37s 150ms/step - loss: 0.4449 - accuracy: 0.7921 - val_loss: 0.4754 - val_accuracy: 0.7840\n",
+      "250/250 [==============================] - 39s 156ms/step - loss: 0.4666 - accuracy: 0.7731 - val_loss: 0.5043 - val_accuracy: 0.7700\n",
       "Epoch 9/25\n",
-      "250/250 [==============================] - 39s 156ms/step - loss: 0.4240 - accuracy: 0.8031 - val_loss: 0.4797 - val_accuracy: 0.7835\n",
+      "250/250 [==============================] - 39s 155ms/step - loss: 0.4499 - accuracy: 0.7860 - val_loss: 0.4665 - val_accuracy: 0.7725\n",
       "Epoch 10/25\n",
-      "250/250 [==============================] - 44s 174ms/step - loss: 0.4251 - accuracy: 0.8026 - val_loss: 0.4447 - val_accuracy: 0.8065\n",
+      "250/250 [==============================] - 40s 159ms/step - loss: 0.4401 - accuracy: 0.7905 - val_loss: 0.4697 - val_accuracy: 0.7745\n",
       "Epoch 11/25\n",
-      "250/250 [==============================] - 41s 162ms/step - loss: 0.4000 - accuracy: 0.8176 - val_loss: 0.4681 - val_accuracy: 0.7870\n",
+      "250/250 [==============================] - 39s 155ms/step - loss: 0.4185 - accuracy: 0.8023 - val_loss: 0.8309 - val_accuracy: 0.6635\n",
       "Epoch 12/25\n",
-      "250/250 [==============================] - 39s 154ms/step - loss: 0.3925 - accuracy: 0.8207 - val_loss: 0.4774 - val_accuracy: 0.7870\n",
+      "250/250 [==============================] - 39s 156ms/step - loss: 0.4130 - accuracy: 0.8124 - val_loss: 0.5479 - val_accuracy: 0.7730\n",
       "Epoch 13/25\n",
-      "250/250 [==============================] - 42s 166ms/step - loss: 0.3898 - accuracy: 0.8220 - val_loss: 0.4495 - val_accuracy: 0.8070\n",
+      "250/250 [==============================] - 39s 156ms/step - loss: 0.4015 - accuracy: 0.8167 - val_loss: 0.4552 - val_accuracy: 0.7925\n",
       "Epoch 14/25\n",
-      "250/250 [==============================] - 41s 163ms/step - loss: 0.3777 - accuracy: 0.8310 - val_loss: 0.4389 - val_accuracy: 0.8105\n",
+      "250/250 [==============================] - 39s 154ms/step - loss: 0.3815 - accuracy: 0.8232 - val_loss: 0.4848 - val_accuracy: 0.7925\n",
       "Epoch 15/25\n",
-      "250/250 [==============================] - 40s 160ms/step - loss: 0.3640 - accuracy: 0.8363 - val_loss: 0.4354 - val_accuracy: 0.8095\n",
+      "250/250 [==============================] - 41s 163ms/step - loss: 0.3761 - accuracy: 0.8345 - val_loss: 0.5508 - val_accuracy: 0.7685\n",
       "Epoch 16/25\n",
-      "250/250 [==============================] - 40s 158ms/step - loss: 0.3467 - accuracy: 0.8485 - val_loss: 0.4355 - val_accuracy: 0.8160\n",
+      "250/250 [==============================] - 40s 160ms/step - loss: 0.3617 - accuracy: 0.8361 - val_loss: 0.4670 - val_accuracy: 0.7970\n",
       "Epoch 17/25\n",
-      "250/250 [==============================] - 41s 162ms/step - loss: 0.3455 - accuracy: 0.8453 - val_loss: 0.4461 - val_accuracy: 0.8195\n",
+      "250/250 [==============================] - 40s 159ms/step - loss: 0.3470 - accuracy: 0.8434 - val_loss: 0.4895 - val_accuracy: 0.7780\n",
       "Epoch 18/25\n",
-      "250/250 [==============================] - 38s 154ms/step - loss: 0.3279 - accuracy: 0.8583 - val_loss: 0.4883 - val_accuracy: 0.7970\n",
+      "250/250 [==============================] - 39s 157ms/step - loss: 0.3342 - accuracy: 0.8525 - val_loss: 0.4885 - val_accuracy: 0.7980\n",
       "Epoch 19/25\n",
-      "250/250 [==============================] - 38s 151ms/step - loss: 0.3250 - accuracy: 0.8575 - val_loss: 0.4385 - val_accuracy: 0.8110\n",
+      "250/250 [==============================] - 39s 155ms/step - loss: 0.3165 - accuracy: 0.8595 - val_loss: 0.4675 - val_accuracy: 0.8020\n",
       "Epoch 20/25\n",
-      "250/250 [==============================] - 39s 156ms/step - loss: 0.3137 - accuracy: 0.8590 - val_loss: 0.4594 - val_accuracy: 0.8090\n",
+      "250/250 [==============================] - 38s 153ms/step - loss: 0.3155 - accuracy: 0.8622 - val_loss: 0.5089 - val_accuracy: 0.7945\n",
       "Epoch 21/25\n",
-      "250/250 [==============================] - 37s 150ms/step - loss: 0.3078 - accuracy: 0.8656 - val_loss: 0.4477 - val_accuracy: 0.8215\n",
+      "250/250 [==============================] - 39s 154ms/step - loss: 0.2915 - accuracy: 0.8754 - val_loss: 0.5569 - val_accuracy: 0.7990\n",
       "Epoch 22/25\n",
-      "250/250 [==============================] - 37s 150ms/step - loss: 0.2996 - accuracy: 0.8715 - val_loss: 0.4884 - val_accuracy: 0.8135\n",
+      "250/250 [==============================] - 38s 153ms/step - loss: 0.2913 - accuracy: 0.8710 - val_loss: 0.4776 - val_accuracy: 0.8080\n",
       "Epoch 23/25\n",
-      "250/250 [==============================] - 38s 152ms/step - loss: 0.2879 - accuracy: 0.8765 - val_loss: 0.4992 - val_accuracy: 0.8020\n",
+      "250/250 [==============================] - 39s 154ms/step - loss: 0.2760 - accuracy: 0.8814 - val_loss: 0.5404 - val_accuracy: 0.7905\n",
       "Epoch 24/25\n",
-      "250/250 [==============================] - 38s 151ms/step - loss: 0.2738 - accuracy: 0.8825 - val_loss: 0.4887 - val_accuracy: 0.7980\n",
+      "250/250 [==============================] - 39s 154ms/step - loss: 0.2538 - accuracy: 0.8906 - val_loss: 0.4805 - val_accuracy: 0.8065\n",
       "Epoch 25/25\n",
-      "250/250 [==============================] - 39s 158ms/step - loss: 0.2664 - accuracy: 0.8871 - val_loss: 0.4901 - val_accuracy: 0.8080\n"
+      "250/250 [==============================] - 39s 155ms/step - loss: 0.2620 - accuracy: 0.8930 - val_loss: 0.5345 - val_accuracy: 0.8005\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x23ab0199f10>"
+       "<keras.src.callbacks.History at 0x265a586af40>"
       ]
      },
      "execution_count": 13,
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "gsSiWEJY1BPB"
    },
@@ -414,14 +414,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 31ms/step\n"
+      "1/1 [==============================] - 0s 36ms/step\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "from tensorflow.keras.preprocessing import image\n",
-    "test_image = image.load_img('dataset\\\\training_set\\\\cats\\\\cat.461.jpg', target_size = (64, 64))\n",
+    "test_image = image.load_img('dataset\\\\test_set\\\\dogs\\\\dog.5000.jpg', target_size = (64, 64))\n",
     "test_image = image.img_to_array(test_image)\n",
     "test_image = np.expand_dims(test_image, axis = 0)\n",
     "result = cnn.predict(test_image)\n",
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {
     "id": "ED9KB3I54c1i"
    },
@@ -443,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cat\n"
+      "dog\n"
      ]
     }
    ],
@@ -453,14 +453,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.]]\n"
+      "[[1.]]\n"
      ]
     }
    ],
@@ -476,9 +476,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python (my display name)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "my_env_name"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
